--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>EDGE LIF — Voice Chat</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -87,6 +86,7 @@
     </div>
   </div>
 
-  <script type="module" src="/api/chat.js"></script>
+  <!-- IMPORTANT: load the browser code from /app.js (NOT /api/...) -->
+  <script type="module" src="/app.js"></script>
 </body>
 </html>
