--- a/index.html
+++ b/index.html
@@ -2,91 +2,272 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>EDGE LIF — Voice Chat</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>EDGE Voice Chat</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
+
   <style>
     :root{
-      --kiosk-scale: 1.35;
-      --bg:#0b0c0f; --panel:#12141a; --muted:#9aa0a6; --text:#e6e9ef;
-      --accent:#f97316; --accent2:#1d232f; --ok:#22c55e; --warn:#eab308; --err:#ef4444;
-      --border:#262a33; --bubble:#1b2430; --bubble2:#22303b; --input:#0f1116;
+      --bg:#0b0c10; --panel:#12141a; --muted:#9aa0a6; --text:#e6e9ef;
+      --accent:#ff7a1a; --accent-2:#222833; --ok:#22c55e; --err:#ef4444;
+      --border:#2a2f36; --bubble-me:#1f2a36; --bubble-bot:#13202b;
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0;
-      font-family:'Montserrat',system-ui,Segoe UI,Roboto,sans-serif;
-      font-size: clamp(16px, calc(0.9vw + 0.9vh)*var(--kiosk-scale), 24px);
-      background:
-        radial-gradient(1200px 800px at 80% -50%, rgba(249,115,22,.10), transparent 60%),
-        radial-gradient(900px 500px at -10% 120%, rgba(34,197,94,.10), transparent 60%),
-        var(--bg);
-      color:var(--text);
-      overflow:hidden;
+      margin:0;background:radial-gradient(1200px 1200px at 50% -20%, #151821 0%, #0b0c10 50%, #000 100%);
+      color:var(--text); font-family:'Montserrat',system-ui,Segoe UI,Roboto,sans-serif;
+      overflow:hidden;  /* page never scrolls */
     }
-    .wrap{
-      height:100%; display:grid;
-      grid-template-rows:auto auto auto 1fr auto auto;
-      gap:clamp(10px, 1.4vh, 18px);
-      padding:clamp(10px, 1.6vh, 22px) clamp(12px, 1.8vw, 28px);
+    .wrap{height:100%;display:grid;grid-template-rows:auto 1fr auto;gap:12px;padding:18px}
+    .topbar{display:flex;align-items:center;gap:14px;justify-content:center}
+    .logo{height:56px;object-fit:contain;filter:drop-shadow(0 8px 24px rgba(0,0,0,.45))}
+    .pill{display:inline-flex;align-items:center;gap:10px;padding:12px 18px;border-radius:999px;background:var(--accent);color:#fff;font-weight:800;cursor:pointer;box-shadow:0 10px 30px rgba(0,0,0,.35)}
+    .pill.secondary{background:var(--accent-2);color:var(--text);border:1px solid var(--border)}
+    .pill[disabled]{opacity:.6;cursor:not-allowed}
+    .status{padding:10px 16px;border-radius:999px;background:var(--accent-2);border:1px solid var(--border);color:#c7d1db}
+    .status.idle{background:#1a212a}
+    .status.listen{background:#0f2c1a;border-color:#1b4d2e;color:#cfeedd}
+    .status.speak{background:#2b1a1a;border-color:#5b2a2a;color:#ffd8d8}
+    .rate{display:flex;align-items:center;gap:10px}
+    input[type=range]{accent-color:var(--accent)}
+    .hint{color:var(--muted);background:#0e1217;border:1px solid var(--border);padding:10px 14px;border-radius:999px}
+
+    .card{height:100%;max-width:1260px;margin:0 auto;width:100%;
+      display:grid;grid-template-rows:auto 1fr auto;gap:14px;
+      background:rgba(16,18,24,.4);backdrop-filter:blur(6px);
+      border:1px solid #1e2430;border-radius:18px;padding:16px 16px 14px;
+      box-shadow:0 30px 80px rgba(0,0,0,.45)
     }
-    .logo{display:block;height:clamp(58px, 9vh, 120px);margin:0 auto;filter:drop-shadow(0 10px 30px rgba(0,0,0,.5))}
-    .errorbar{display:none;background:#3b1d1d;border:1px solid #7a2e2e;color:#f3caca;padding:.7em 1em;border-radius:10px}
-    .controls{display:flex; gap:clamp(8px,1vw,16px); align-items:center; justify-content:center; flex-wrap:wrap}
-    .badge{font-size:.85em;padding:.6em .9em;border-radius:999px;border:1px solid var(--border);background:var(--panel);color:var(--muted)}
-    .badge.ok{color:#eaffef;border-color:#214f35;background:linear-gradient(180deg,#173425,#0f1b16)}
-    .badge.speaking{color:#ffefe6;border-color:#5b3116;background:linear-gradient(180deg,#2e170e,#1b110c)}
-    .badge.interrupt{color:#ffeaea;border-color:#6a1d1d;background:linear-gradient(180deg,#3a1616,#1f0e0e)}
-    .pill{border:1px solid var(--border);background:var(--panel);color:var(--text);padding:.8em 1.1em;border-radius:12px;display:flex;align-items:center;gap:10px;font-weight:700}
-    .switch{display:flex;align-items:center;gap:10px;padding:.6em .9em;border-radius:12px;border:1px solid var(--border);background:var(--panel)}
-    .switch input{width:1.2em;height:1.2em}
-    .range{display:flex;align-items:center;gap:.8em;border:1px solid var(--border);padding:.6em .9em;border-radius:12px;background:var(--panel)}
-    .range input{width: clamp(140px, 20vw, 220px)}
-    .chat{background:var(--panel);border:1px solid var(--border);border-radius:16px;padding:clamp(10px, 1.2vh, 14px);min-height:0;display:grid;grid-template-rows:1fr;overflow:hidden}
-    #log{overflow:auto;padding-right:10px;display:grid;gap:clamp(10px,1.1vh,14px);align-content:start}
-    .msg{max-width:min(90%,1600px);border-radius:14px;padding:clamp(12px,1.2vh,16px) clamp(14px,1.6vw,18px);line-height:1.6;white-space:pre-wrap;font-size:1em}
-    .user{justify-self:end;background:var(--bubble2)}
-    .assistant{justify-self:start;background:var(--bubble)}
-    .composer{display:grid;grid-template-columns:1fr auto;gap:clamp(10px,1.2vw,16px);margin-top:4px}
-    textarea{width:100%;background:var(--input);color:var(--text);border:1px solid var(--border);border-radius:14px;padding:clamp(12px,1.2vh,16px) clamp(14px,1.6vw,18px);resize:none;min-height: clamp(110px,16vh,200px);font-size:1em}
-    button.btn{background:var(--accent);color:white;border:0;border-radius:14px;padding:clamp(14px,1.5vh,18px) clamp(18px,2vw,24px);font-weight:800;cursor:pointer;box-shadow:0 8px 28px rgba(249,115,22,.30);font-size:1em}
-    .footer{color:var(--muted); text-align:center; font-size:.9em}
-    .footer a{color:#92c5ff; text-decoration:none}
+    .sysline{color:#c4cad4;background:#0e1116;border:1px dashed #283140;border-radius:12px;padding:12px 16px}
+    .scroll{overflow:auto;border-radius:14px;background:#0d1218;border:1px solid var(--border);padding:14px;display:grid;gap:12px}
+    .msg{padding:12px 16px;border-radius:14px;line-height:1.55;max-width:80%}
+    .me{justify-self:end;background:var(--bubble-me)}
+    .bot{justify-self:start;background:var(--bubble-bot)}
+    .err{background:#3b1d1d;border:1px solid #7a2e2e;color:#f3caca}
+    textarea{
+      width:100%;background:#0c1015;color:var(--text);border:1px solid var(--border);
+      border-radius:14px;padding:14px 16px;font-family:inherit;resize:none;height:84px
+    }
+    .row{display:grid;grid-template-columns:1fr auto;gap:14px}
+    .send{min-width:130px}
+    .btn{border:0;padding:18px 22px;border-radius:16px;font-weight:800;cursor:pointer;
+      background:var(--accent);color:white; font-size:18px;letter-spacing:.2px;
+      box-shadow:0 10px 30px rgba(255,122,26,.25)
+    }
+    .btn:active{transform:translateY(1px)}
+    .footer{color:#aab2bd;text-align:center}
+    .footer a{color:#a7d7ff;text-decoration:none;border-bottom:1px solid rgba(167,215,255,.35)}
+    .cb{display:flex;align-items:center;gap:10px}
   </style>
 </head>
 <body>
   <div class="wrap">
-    <img class="logo" src="/logo.png" alt="EDGE LIF" />
-    <div id="err" class="errorbar"></div>
-
-    <div class="controls">
-      <button id="toggleVoice" class="btn pill">Start Voice</button>
-      <span id="stateBadge" class="badge">Idle</span>
-      <label class="switch">
-        <input type="checkbox" id="speakSwitch" checked />
+    <!-- Top bar -->
+    <div class="topbar">
+      <button id="toggle" class="pill">Voice On</button>
+      <div id="vstat" class="pill secondary status idle">Idle</div>
+      <label class="pill secondary cb">
+        <input id="speakCk" type="checkbox" checked>
         <span>Speak replies</span>
       </label>
-      <label class="range">
+      <div class="pill secondary rate">
         <span>Rate</span>
-        <input id="rate" type="range" min="0.7" max="1.6" step="0.05" value="1.0" />
-      </label>
-      <span class="badge">Tip: press <b>M</b> to toggle mic</span>
+        <input id="rate" type="range" min="0.7" max="1.4" step="0.05" value="1.0">
+      </div>
+      <img src="/logo.png" alt="EDGE LIF" class="logo">
+      <div class="hint">Tip: press <b>M</b> to toggle mic</div>
     </div>
 
-    <div class="chat"><div id="log"></div></div>
+    <!-- Main card -->
+    <div class="card">
+      <div class="sysline">Voice is optional. Press “Start Voice” and allow the microphone, or type a message.</div>
+      <div id="log" class="scroll"></div>
 
-    <div class="composer">
-      <textarea id="input" placeholder="Type a message…  (Enter to send, Shift+Enter for newline)"></textarea>
-      <button id="send" class="btn">Send</button>
+      <div class="row">
+        <textarea id="input" placeholder="Type a message…  (Enter to send, Shift+Enter for newline)"></textarea>
+        <button id="send" class="btn send">Send</button>
+      </div>
     </div>
 
-    <div class="footer">
-      Created by <a href="https://www.linkedin.com/in/awaiz-ahmed/" target="_blank" rel="noopener">Awaiz Ahmed</a>
-    </div>
+    <div class="footer">Created by <a href="https://www.linkedin.com/in/awaiz-ahmed/" target="_blank" rel="noopener">Awaiz Ahmed</a></div>
   </div>
 
-  <!-- IMPORTANT: load the browser code from /app.js (NOT /api/...) -->
-  <script type="module" src="/app.js"></script>
+  <script>
+    // ----------------------- Helpers & UI -----------------------
+    const $ = s => document.querySelector(s);
+    const log = $('#log'), input = $('#input'), sendBtn = $('#send');
+    const toggleBtn = $('#toggle'), voiceStatus = $('#vstat');
+    const speakCk = $('#speakCk'), rate = $('#rate');
+
+    function push(role, text, cls=''){
+      const div = document.createElement('div');
+      div.className = `msg ${role==='user'?'me':'bot'} ${cls}`;
+      div.textContent = text;
+      log.appendChild(div);
+      log.scrollTop = log.scrollHeight;
+    }
+    function showStatus(kind, text){
+      voiceStatus.className = `pill secondary status ${kind}`;
+      voiceStatus.textContent = text;
+    }
+
+    const history = []; // chat history
+    function limitWords(s, n=100){
+      const words = String(s||'').trim().split(/\s+/);
+      return words.length > n ? words.slice(0, n).join(' ') + '…' : s;
+    }
+
+    // ----------------------- TTS (Emily preferred) -----------------------
+    let voice = null;
+    function chooseVoice(){
+      const voices = window.speechSynthesis.getVoices() || [];
+      voice = null;
+      // Prefer Emily if present
+      for (const v of voices){
+        if (/Microsoft Emily Online \(Natural\)/i.test(v.name)){ voice = v; break; }
+      }
+      // sensible fallbacks
+      if (!voice){
+        voice = voices.find(v=>/Microsoft|Google US English|Samantha|Daniel|Serena/i.test(v.name)) || voices[0] || null;
+      }
+    }
+    window.speechSynthesis.onvoiceschanged = chooseVoice;
+    chooseVoice();
+
+    let speaking = false;
+    const controller = new AbortController(); // to stop queued speech
+
+    function speak(text){
+      if (!speakCk.checked) return;
+      try{
+        const u = new SpeechSynthesisUtterance(text);
+        if (voice) u.voice = voice;
+        u.rate = parseFloat(rate.value) || 1.0;
+        u.onstart = ()=>{ speaking = true; showStatus('speak','Speaking'); };
+        u.onend   = ()=>{ speaking = false; showStatus(listening?'listen':'idle', listening?'Listening':'Idle'); };
+        window.speechSynthesis.cancel(); // cancel anything pending
+        window.speechSynthesis.speak(u);
+      }catch(e){ console.warn('TTS error', e); }
+    }
+    function stopSpeaking(){
+      try{ window.speechSynthesis.cancel(); }catch(e){}
+      speaking = false;
+    }
+
+    // ----------------------- STT (webkitSpeechRecognition) -----------------------
+    const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
+    let rec = null, listening = false, lastTranscript = '', cooldown = false;
+
+    function initSR(){
+      if (!SR) return;
+      rec = new SR();
+      rec.lang = 'en-US';
+      rec.continuous = false; // end on silence
+      rec.interimResults = true;
+      rec.maxAlternatives = 1;
+
+      rec.onstart = () => { listening = true; showStatus('listen','Listening'); };
+      rec.onerror = (e) => { showStatus('idle','Idle'); console.warn('ASR error', e); listening=false; };
+      rec.onend = async () => {
+        listening = false;
+        showStatus('idle','Idle');
+        const text = squash(lastTranscript).trim();
+        lastTranscript = '';
+        if (text) {
+          await handleUserText(text);
+        }
+        // small cooldown to avoid fast re-trigger
+        setTimeout(()=> { if (voiceOn) startSR(); }, 1000);
+      };
+      rec.onresult = (ev) => {
+        let final = '';
+        for (let i=ev.resultIndex; i<ev.results.length; i++){
+          const r = ev.results[i];
+          if (r.isFinal) final += r[0].transcript + ' ';
+          else lastTranscript = r[0].transcript;
+        }
+        if (final) lastTranscript += ' ' + final;
+      };
+    }
+    initSR();
+
+    // collapse obvious repetitions from partial results
+    function squash(t){
+      return String(t||'')
+        .replace(/\s+/g,' ')
+        .replace(/\b(\w+)( \1\b)+/gi,'$1'); // hello hello hello -> hello
+    }
+
+    let voiceOn = false;
+    function startSR(){
+      if (!rec) return;
+      try{ rec.start(); }catch{} // start can throw if already started
+    }
+    function stopSR(){
+      if (!rec) return;
+      try{ rec.stop(); }catch{}
+      listening = false;
+      showStatus('idle','Idle');
+    }
+
+    // interrupt speaking when user starts talking again
+    document.addEventListener('keydown', (e)=>{
+      if (e.key.toLowerCase()==='m'){ e.preventDefault(); toggleVoice(); }
+    });
+
+    toggleBtn.onclick = toggleVoice;
+    function toggleVoice(){
+      voiceOn = !voiceOn;
+      toggleBtn.textContent = voiceOn ? 'Voice On' : 'Voice Off';
+      if (voiceOn){ stopSpeaking(); startSR(); }
+      else { stopSR(); stopSpeaking(); }
+    }
+
+    // ----------------------- Chat (calls /api/chat) -----------------------
+    async function postJSON(url, payload){
+      const r = await fetch(url, {method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify(payload)});
+      const text = await r.text();
+      if (!r.ok) throw new Error(`HTTP ${r.status} – ${text}`);
+      return JSON.parse(text);
+    }
+
+    async function handleUserText(text){
+      push('user', text);
+      history.push({role:'user', content:text});
+      try{
+        // stop listening while we ask the model
+        stopSR();
+        const res = await postJSON('/api/chat', {messages: history.slice(-8)});
+        const raw = res.reply || '';
+        const reply = limitWords(raw, 100);
+        history.push({role:'assistant', content:reply});
+        push('assistant', reply);
+        speak(reply);
+      }catch(e){
+        push('assistant', `[error] ${e.message}`, 'err');
+      }finally{
+        // after 1s, resume listening automatically if voice mode is on
+        setTimeout(()=>{ if (voiceOn) startSR(); }, 1000);
+      }
+    }
+
+    sendBtn.onclick = async ()=>{
+      const text = input.value.trim();
+      if (!text) return;
+      input.value = '';
+      await handleUserText(text);
+      input.focus();
+    };
+    input.addEventListener('keydown', (ev)=>{
+      if (ev.key==='Enter' && !ev.shiftKey){
+        ev.preventDefault(); sendBtn.click();
+      }
+    });
+
+    // If user starts talking while TTS is speaking, interrupt speech and switch to listening
+    document.addEventListener('visibilitychange',()=>{}); // no-op; keeps audio context warm
+  </script>
 </body>
 </html>
